--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>todoList</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
 
+<body class="body">
+    <div class="container">
+        <h1 class="title">
+            Мої завдання
+        </h1>
+        <input type="text" class="input" />
+        <div class="list">
+
+        </div>
+    </div>
+    <script type="text/javascript" src="script.js"></script>
 </body>
+
 </html>
-  
