--- a/index.html
+++ b/index.html
@@ -13,10 +13,17 @@
         <h1 class="title">
             Мої завдання
         </h1>
-        <input type="text" class="input" />
-        <div class="list">
-
+        <div class="container_button">
+            <input id="input" type="text" class="input" />
+            <button 
+                onclick="addNewItem()" 
+                type="button" 
+                class="button"
+            >
+                add
+            </button>
         </div>
+        <ul id="list" class="list"></ul>
     </div>
     <script type="text/javascript" src="script.js"></script>
 </body>
